@@ -101,3 +101,4 @@ Fixes/Patches incorporated from:
 	Chae Young-ku
 	Ville Silventoinen
 	Gerhard Lausser
+	Samat Yusupov
